--- a/simulations/yamls/application_ymals/dist_pubsub_data_pipeline_kube.yml
+++ b/simulations/yamls/application_ymals/dist_pubsub_data_pipeline_kube.yml
@@ -1,3 +1,5 @@
+# Data Pipeline - Data-lake (storage) -> Queueing system (kafka/etc) -> Perparation/COmputation (Spark/StreamRunners/simple lambda/Model Training) -> Data Warehouse (ElasticeSearch/Dynamo/Dbs/Tabelu) -> API/Applications
+
 services:
   product_page:
     name: product_page
