--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@
 *.pyc
 simulations/runs/*
 *.json
+app/kubernetes_servcice_selection/main_bck.csv
+simulations/run_csv/cdn_kube_few_storage.csv
+simulations/run_csv/cdn_kube_multi_storge.csv
+simulations/run_csv/cdn_kube_video_stream.csv
+simulations/run_csv/game_and_chat_app_worldwide.csv
+simulations/run_csv/image_data_pipeline_kube.csv
