--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ simulations/run_csv/cdn_kube_multi_storge.csv
 simulations/run_csv/cdn_kube_video_stream.csv
 simulations/run_csv/game_and_chat_app_worldwide.csv
 simulations/run_csv/image_data_pipeline_kube.csv
+simulations/main_bck.csv
+simulations/run_csv/main.csv
